--- a/requirements.txt
+++ b/requirements.txt
@@ -31,4 +31,6 @@ google-auth-httplib2==0.1.1
 google-api-python-client==2.108.0
 anthropic>=0.18.0
 pypdf2>=3.0.0
+pdf2image>=1.16.3
+Pillow>=10.0.0
 
